cleaning code: unused methods and imports